traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:1: error: not found: value positionFinale
  while (positionFinale()==false){
         ^TraversalByColumn:16: error: not found: value positionFinale
  while (positionFinale()==false){
         ^