traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  while (positionFinale()==false){
    Next()
  }
  
}

def postionFinale():Boolean={
  if ((getMondeLargeur()-1,getMondeHauteur()-1)==(getX(),getY())){
    return true
  } else {
    return false
  }
}

def Next() {
  while (positionFinale()==false){
    while (getY()<6){
      setPos(getX(),getY()+1)
    }
    setPos(getX()+1,0)
    
    
  }
  
}